# CMPE_297_Special-Topics

./: README.md
Assignment_1_ADK/: README.md
Assignment_2_MCP_A2A_codelabs/: README.md
Assignment_2_MCP_A2A_codelabs/A_multiagent/: pyproject.toml  requirements.txt
Assignment_3_e2e_ADK/: README.md
Assignment_3_e2e_ADK/A_LeadGenerationAgent/: env_example  pyproject.toml
Assignment_3_e2e_ADK/A_LeadGenerationAgent/LeadGenerationResearch/: agent.py  prompt.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/LeadGenerationResearch/sub_agents/intent_extractor/: agent.py  prompt.py  schemas.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/LeadGenerationResearch/sub_agents/lead_generation/: agent.py  prompt.py  schemas.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/LeadGenerationResearch/sub_agents/pattern_discovery/: agent.py  prompt.py  schemas.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/LeadGenerationResearch/tools/: agent_tools.py  callbacks.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/deployment/: deploy.py  test_deploy.py
Assignment_3_e2e_ADK/A_LeadGenerationAgent/publish/: publish.sh
Assignment_3_e2e_ADK/B_gemini_cli_on_adk/: Dockerfile  GEMINI.md  Makefile  cloudbuild.yaml  (+1 more)
Assignment_4_Fullstack_E2E_Agentic_multimodal_application_with_agentic rag/: README.md
Assignment_5_Modern_AI_with_Unsloth.AI/: Colab 1 – Full Fine-Tuning with the SmolLM2-135M model.ipynb  Colab 2 - LoRA parameter-efficient fine-tuning.ipynb  Colab_3_RL_with_Unsloth_DPO.ipynb  Colab_4_RL_with_GRPO.ipynb  Colab_5_Continued_Pretraining.ipynb  README.md
Short_Story_MA-RAG/: README.md
(+127 files in other folders)
